styles/globals.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  box-shadow: none;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

:root {
  --primary-background-color: #121212;
  --secondary-background-color: #242424;
  --tertiary-background-color: #333333;
  --primary-text-color: #fff;
  --secondary-text-color:rgba(255, 255, 255, 0.74);
  --login-form-background-color: #121212;
  --primary-color: #F36D25;
  --modal-error-background-color: #fff1f1;
  --modal-error-border-color: #f6d1d3;  
  --modal-error-text-color: #9f0000;
  --modal-success-background-color: #d4edda;
  --modal-success-text-color: #155724;
  --modal-success-border-color: #b5e6c4;
  --status-not-started-background-color: #910810;
  --status-in-progress-background-color: #df9a00;
  --status-shipping-background-color: #df3600;
  --status-finished-background-color: #497e14;
}


a {
  color: var(--primary-text-color);
  text-decoration: none;
  transition: .3s;
}

a:hover {
  color: var(--primary-color);
}

::-webkit-scrollbar {
  width: 5px;
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius:30px;
  background-color: var(--primary-color);
}

.main-content {
  background-color: var(--primary-background-color);
  overflow-y: hidden;
  color: var(--primary-text-color);
  display: flex;
}

.children {
  flex: 1 1 calc(100vw - 200px);
  height: 100vh;
  overflow-y: auto;
}

.title {
  font-size: 2.5rem;
  margin: 5px 0;
  color: var(--primary-color);
}

.secondary-title {
  font-size: 1.8rem;
  margin-bottom: 15px;
}

.paginations {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  list-style: none;
}

.paginations li {
  font-size: 1.5rem;
  margin: 10px;
  height: 32px;
  width: 32px;
  text-align: center;
}

.pagination-button {
  font-size: 1.5rem;
  border-radius: 50%;
  height: 32px;
  width: 32px;
  text-align: center;
  cursor: pointer;
  transition: .3s;
  background-color: transparent;
  border: none;
  color: var(--primary-text-color);
}

.pagination-button:disabled {
  color: var(--secondary-text-color);
}

.pagination-button:hover {
  background-color: var(--primary-color);
}

.primary-btn {
  margin: 10px 5px;
  padding: 10px 30px;
  font-size: 1.25rem;
  border: 2px var(--primary-color) solid;
  border-radius: 3px;
  background-color: var(--primary-color);
  color: var(--primary-text-color);
  transition: .3s;
  cursor: pointer;
  display: inline-block;
}

.primary-btn:hover {
  background-color: transparent;
  color: var(--primary-color);
}

.secondary-btn {
  margin: 10px 5px;
  padding: 10px 30px;
  font-size: 1.25rem;
  border-radius: 3px;
  background-color: transparent;
  color: var(--primary-color);
  transition: .3s;
  cursor: pointer;
  border: 2px var(--primary-color) solid;
}

form {
  overflow-y: auto;
}

form::-webkit-scrollbar {
  display: none;
}

input, select, textarea {
  display: block;
  background-color: transparent;
  color: var(--primary-text-color);
  outline: none;
  border: 2px var(--secondary-text-color) solid;
  border-radius: 3px;
  padding: 10px;
  margin: 10px 0;
  width: 100%;
  resize: vertical;
}

input:focus,
select:focus, 
textarea:focus {
  border-color: var(--primary-color);
}

option {
  background-color: var(--primary-background-color);
}

input[type="datetime-local"],
input[type="date"] {
  color-scheme: dark;
  resize: none;
}

select {
  background-color: var(--primary-background-color);
  color: var(--primary-text-color);
}

::placeholder {
  color: var(--secondary-text-color)
}

.upper {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.upper h3 {
  font-size: 1.4rem;
}

.upper span {
  font-size: 2rem;
  margin-left: 20px;
  cursor: pointer;
  transition: .3s
}

.upper span:hover {
  color: var(--primary-color);
}

.whatsapp-link {
  font-size: 2rem;
  transition: .3s;
}

.whatsapp-link:hover {
  color: #25d366;
}

form {
    overflow: hidden;
    transition: .5s;
}

@media screen and (max-width: 560px) {
  .title {
    font-size: 1.95rem;
  }
  .secondary-title {
    font-size: 1.5rem;
  }
}

